Bug 1158933 - Prevent scrollbars from jumping while zoomed in the B2G browser. r=botond